--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,42 +1,119 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+@import url("https://fonts.cdnfonts.com/css/lazy-dog");
+
+body {
+  font-family: "Lazy Dog", sans-serif;
+  text-transform: uppercase;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 320px;
+  min-height: 100vh;
+  background-color: #fffbf4;
+}
+
+.app-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 20px;
+  background-color: #fffbf4;
+}
+
+h1 {
+  font-size: 4em;
+  line-height: 1.1;
+  text-transform: uppercase;
+  margin: 20px 0;
+  color: #000;
+}
+
+.submit-container,
+.retry-container {
+  margin-top: 20px;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.submit-icon,
+.retry-button {
+  width: 100px;
+  height: 100px;
+  margin: 20px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #fddbcf;
+  border-radius: 50%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.submit-button,
+.retry-button {
+  background-color: #e2b3ad;
+  color: black;
+  border: none;
+  border-radius: 30px;
+  padding: 15px 30px;
+  font-size: 1.2rem;
+  font-family: "Lazy Dog", sans-serif;
+  cursor: pointer;
+  margin-top: 20px;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease;
 }
 
-.card {
-  padding: 2em;
+.submit-button:hover,
+.retry-button:hover {
+  background-color: #e76f51;
+  transform: translateY(-2px);
 }
 
-.read-the-docs {
-  color: #888;
+.upload-button {
+  width: 60px;
+  height: 60px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.upload-button svg {
+  width: 100%;
+  height: 100%;
+  transition: transform 0.2s ease-in-out;
+}
+
+.upload-button:hover svg {
+  transform: scale(1.1);
+}
+
+.response-container {
+  margin-top: 30px;
+  text-align: center;
+}
+
+footer {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #f5c2b8;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
+}
+
+footer button {
+  border: none;
+  background: none;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+footer button:hover {
+  transform: scale(1.1);
 }
