--- a/src/style/App.css
+++ b/src/style/App.css
@@ -23,7 +23,7 @@ body {
 }
 
 h1 {
-  font-size: 4em;
+  font-size: 4rem;
   line-height: 1.1;
   text-transform: uppercase;
   margin: 20px 0;
@@ -86,13 +86,14 @@ h1 {
   justify-content: center;
   align-items: center;
   text-align: center;
-  margin-top: 20px;
-  border-radius: 50%;
+  margin-top: 10px;
+  border-radius: 40%;
   cursor: pointer;
+  transform: scale(0.5);
 }
 
 .upload-container:hover {
-  transform: scale(1.01);
+  transform: scale(0.505);
 }
 
 .response-container {
