--- a/src/style/App.css
+++ b/src/style/App.css
@@ -138,3 +138,29 @@ footer button:hover {
     font-size: 1rem;
   }
 }
+
+.aboutButton {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+}
+
+.modal {
+  position: fixed;
+  background-color: pink;
+  padding: 20px;
+  border-radius: 10px;
+  width: 300px;
+  max-width: 80%;
+  text-align: center;
+}
+
+.overlay{
+  position: fixed;
+  top: 20px;
+  left: 50%;
+  right: 50%;
+  width: 300px;
+  height: 300px;
+  
+}
