--- a/src/style/App.css
+++ b/src/style/App.css
@@ -67,7 +67,7 @@ h3 {
 .about-container {
   position: fixed;
   bottom: 20px;
-  right: 80px;
+  right: 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -76,8 +76,7 @@ h3 {
 }
 
 .submit-button,
-.retry-button,
-.about-button {
+.retry-button {
   background-color: #e2b3ad;
   color: black;
   border: none;
@@ -87,6 +86,20 @@ h3 {
   font-family: "Lazy Dog", sans-serif;
   cursor: pointer;
   margin-top: 20px;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease;
+}
+
+.about-button {
+  background-color: #e2b3ad;
+  color: black;
+  border: none;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  font-size: 1.2rem;
+  font-family: "Lazy Dog", sans-serif;
+  cursor: pointer;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease;
 }
@@ -111,7 +124,7 @@ h3 {
 }
 
 .upload-container:hover {
-  transform: scale(0.505);
+  transform: scale(0.51);
 }
 
 .response-container {
@@ -119,31 +132,6 @@ h3 {
   text-align: center;
   word-wrap: break-word;
   width: 90%;
-}
-
-footer {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  background-color: #f5c2b8;
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
-}
-
-footer button {
-  border: none;
-  background: none;
-  font-size: 1.5rem;
-  cursor: pointer;
-}
-
-footer button:hover {
-  transform: scale(1.1);
 }
 
 @media (max-width: 768px) {
@@ -157,28 +145,32 @@ footer button:hover {
   }
 }
 
-.aboutButton {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-}
-
 .modal {
   position: fixed;
-  background-color: pink;
-  padding: 20px;
-  border-radius: 10px;
-  width: 300px;
-  max-width: 80%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff9f3;
+  padding: 20px 30px;
+  border-radius: 15px;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
   text-align: center;
+  max-width: 300px;
+  animation: fadeIn 0.3s ease-in-out;
 }
 
-.overlay{
+.modal p {
+  font-size: 1.2rem;
+  line-height: 1.5;
+  color: #333;
+  margin: 0;
+}
+
+.overlay {
   position: fixed;
   top: 20px;
   left: 50%;
   right: 50%;
   width: 300px;
   height: 300px;
-  
 }
