--- a/src/style/App.css
+++ b/src/style/App.css
@@ -89,11 +89,12 @@ h1 {
   margin-top: 10px;
   border-radius: 40%;
   cursor: pointer;
-  transform: scale(0.5);
+  transform: scale(0.75);
+  font-size: 25px;
 }
 
 .upload-container:hover {
-  transform: scale(0.505);
+  transform: scale(0.76);
 }
 
 .response-container {
