--- a/src/style/App.css
+++ b/src/style/App.css
@@ -51,8 +51,8 @@ h3 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 20px;
   text-align: center;
+  transform: scale(1.2);
 }
 
 .retry-container {
@@ -62,6 +62,7 @@ h3 {
   align-items: center;
   margin-top: 20px;
   text-align: center;
+  transform: scale(1.1)
 }
 
 .about-container {
@@ -82,7 +83,7 @@ h3 {
   border: none;
   border-radius: 30px;
   padding: 15px 30px;
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   font-family: "Lazy Dog", sans-serif;
   cursor: pointer;
   margin-top: 20px;
@@ -148,10 +149,9 @@ h3 {
 
 .modal {
   position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: #fff9f3;
+  bottom: 90px; /* Adjusted to position it just above the about button */
+  right: 20px;
+  background-color: #fddbcf;
   padding: 20px 30px;
   border-radius: 15px;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
