--- a/src/style/App.css
+++ b/src/style/App.css
@@ -158,6 +158,7 @@ h3 {
   text-align: center;
   max-width: 300px;
   animation: fadeIn 0.3s ease-in-out;
+  border-color: pink;
 }
 
 .modal p {
@@ -165,6 +166,7 @@ h3 {
   line-height: 1.5;
   color: #333;
   margin: 0;
+  border-color: pink;
 }
 
 .overlay {
@@ -172,8 +174,8 @@ h3 {
   top: 20px;
   left: 50%;
   right: 50%;
-  width: 300px;
-  height: 300px;
+  width: 10%;
+  height: 10%;
 }
 
 /* for upload image */
